# 2026-EdgeOfRule-Bevy

./: .gitignore
edge_of_rule/: Cargo.toml  Packager.windows.toml
edge_of_rule/assets/images/levels/day1/: scene3_background.png~
edge_of_rule/assets/images/levels/day2/: scene1_mask.png~
edge_of_rule/src/: constants.rs  main.rs
edge_of_rule/src/animation/: arrow.rs  chest.rs  cover.rs  door.rs  elevator.rs  fade_mask.rs  hurt_shake.rs  lift.rs  lift_door.rs  mod.rs  player.rs  trapdoor.rs
edge_of_rule/src/assets/: arrow.rs  door.rs  elevator.rs  hud.rs  levels.rs  lift.rs  mod.rs  player.rs  ui_image.rs
edge_of_rule/src/control/: ghost.rs  mod.rs  player.rs  sewage_damage.rs  water.rs
edge_of_rule/src/core/: health.rs  inventory.rs  mod.rs  state.rs
edge_of_rule/src/entities/: arrow.rs  broken_floor.rs  chest.rs  circuit.rs  controller.rs  cover.rs  desk.rs  door.rs  elevator.rs  ghost.rs  ground.rs  hole.rs  key.rs  ladder.rs  lift.rs  log.rs  mirror.rs  mod.rs  notice_board.rs  office_desk.rs  pipe.rs  platform.rs  player.rs  press_e.rs  screw.rs  sewage.rs  small_note.rs  small_platform.rs  small_wall.rs  table.rs  trapdoor.rs  wall.rs  windows.rs
edge_of_rule/src/gameplay/: mod.rs  player.rs
edge_of_rule/src/levels/: day3.rs  mod.rs
edge_of_rule/src/levels/day1/: mod.rs
edge_of_rule/src/levels/day1/scene1/: mod.rs
edge_of_rule/src/levels/day1/scene2/: mod.rs
edge_of_rule/src/levels/day2/: mod.rs
edge_of_rule/src/physics/: collision.rs
edge_of_rule/src/ui/: mod.rs
edge_of_rule/src/ui/hud/: mod.rs
edge_of_rule/src/ui/mainmenu/: mod.rs
(+183 files in other folders)
